--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
     <p class="display-3 mt-3 mb-4 title-view-anime">Welcome on météhenchoz&#160;!</p>
 
     <div class="row mb-4">
-        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1 position-relative">
+        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1 position-relative" id="weather-1" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <div class="weather-title-icon m-2">
                 <p id="title-city1" class="display-4 title-city">New York</p>
                 <img class="icon" id="icon1" alt="icon">
@@ -20,7 +20,25 @@
                 <p id="temp-city1" class="display-4 temperature-city text-white ms-2 p-2 mb-3"></p>
             </div>
         </div>
-        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-2 position-relative">
+        <!-- Modal -->
+ <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-2 position-relative" id="weather-2">
             <div class="weather-title-icon m-2">
                 <p id="title-city2" class="display-4 title-city">Paris</p>
                 <img class="icon" id="icon2" alt="icon">
@@ -29,7 +47,7 @@
                 <p id="temp-city2" class="display-4 temperature-city text-white ms-2 p-2 mb-3"></p>
             </div>
         </div>
-        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-3 position-relative">
+        <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-3 position-relative" id="weather-3">
             <div class="weather-title-icon m-2">
                 <p id="title-city3" class="display-4 title-city">London</p>
                 <img class="icon" id="icon3" alt="icon">
@@ -42,10 +60,15 @@
 
     <p class="display-4 subtitle">Welcome!</p><br>
     <p class="text-home text-justify">On this site you will find the weather of your favourite cities!</p>
-    <p class="text-home text-justify">Above, the current temperature, time and weather is displayed for New York City, Paris and London.</p>
-    <p class="text-home text-justify">If you want to add your own weather stations, please refer to the <span
-        id="link-stations-text-home text-justify" class="link">stations</span> page.</p>
-    <p class="text-home text-justify">Weather data is provided by <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.</p>
-    <p class="text-home text-justify" style="padding-bottom: 120px;">This website was created by Noé Henchoz as part of a development module at the EMF. It uses HTML, CSS and JavaScript.</p>
+    <p class="text-home text-justify">Above, the current temperature, time and weather is displayed for New York City,Paris and London.</p>
+    <p class="text-home text-justify">If you want to add your own weather stations, please refer to the 
+        <span id="link-stations-text-home" class="link">stations</span> page.
+    </p>
+    <p class="text-home text-justify">Weather data is provided by 
+        <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.
+    </p>
+    <p class="text-home text-justify" style="padding-bottom: 120px;">
+        This website was created by Noé Henchoz as part of a development module at the EMF. It uses HTML, CSS and JavaScript.
+    </p>
 
 </div>
