--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
 
     <p class="display-3 mt-3 mb-4 title-view-anime">Welcome on météhenchoz&#160;!</p>
 
-    <div class="row mb-4">
+    <div class="row mb-4 row-weather-home">
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1 position-relative" id="weather-1" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <div class="weather-title-icon m-2">
                 <p id="title-city1" class="display-4 title-city">New York</p>
@@ -21,23 +21,23 @@
             </div>
         </div>
         <!-- Modal -->
- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                ...
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+            </div>
         </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-2 position-relative" id="weather-2">
             <div class="weather-title-icon m-2">
                 <p id="title-city2" class="display-4 title-city">Paris</p>
