--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -68,15 +68,14 @@ footer {
   }
 }
 
-@keyframes toRight {
+@keyframes fromRightWithBlur {
   0% {
-    transform: translateX(0px);
-  }
-  50% {
-    transform: translateX(20px);
+    transform: translateX(200px);
+    opacity: 0;
   }
   100% {
     transform: translateX(0px);
+    opacity: 1;
   }
 }
 
@@ -139,4 +138,8 @@ footer {
 .link:hover {
   color: black;
   transition: color 0.3s ease-in-out;
+}
+
+.row-weather-home {
+  animation: fromRightWithBlur 1.5s;
 }
