--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -18,6 +18,7 @@ body {
 .navbar {
   background-color: #fac05e!important;
   border-bottom: 1px solid #000000;
+  animation: fromTop 0.7s;
 }
 
 /* Cursor pointer on nav links */
@@ -76,6 +77,15 @@ footer {
   100% {
     transform: translateX(0px);
     opacity: 1;
+  }
+}
+
+@keyframes fromTop {
+  0% {
+    transform: translateY(-100px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
 
