--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
@@ -37,7 +37,7 @@
                 </div>
             </div>
             </div>
-        </div>
+        </div> -->
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-2 position-relative" id="weather-2">
             <div class="weather-title-icon m-2">
                 <p id="title-city2" class="display-4 title-city">Paris</p>
