--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -7,7 +7,7 @@
 html{background-color: #fff;}
 
 body {
-  margin-bottom: 150px;
+  margin-bottom: 149px;
   background-color: rgb(168, 199, 252);
 }
 
@@ -47,7 +47,7 @@ body {
 /* footer */
 footer {
   width: 100%;
-  height: 152px;
+  height: 150px;
   z-index: -1;
   background-color: #fac05e;
 }
@@ -152,4 +152,24 @@ footer {
 
 .row-weather-home {
   animation: fromRightWithBlur 1.5s;
+}
+
+.modal-locate {
+  display: flex; 
+  justify-content: space-between;
+  padding: 10px;
+  border: 1px solid rgba(0,0,0,0.2);
+  border-radius: 0.3em;
+}
+.modal-search {
+  display: flex; 
+  justify-content: space-between;
+  padding: 10px;
+  border: 1px solid rgba(0,0,0,0.2);
+  border-radius: 0.3em;
+}
+
+.modal-locate:hover, .modal-search:hover {
+  cursor: pointer;
+  background-color: lightgray;
 }
