--- a/views/stations.html
+++ b/views/stations.html
@@ -7,29 +7,31 @@
 <!DOCTYPE html>
 
 <div class="container">
+
+  <div class="center flex-shrink-0 my-auto">
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#choiceModal">Search for a city</button>
+  </div>
   
-   <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-   Launch demo modal
- </button>
- 
- <!-- Modal -->
- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-   <div class="modal-dialog modal-dialog-centered">
-     <div class="modal-content">
-       <div class="modal-header">
-         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-       </div>
-       <div class="modal-body">
-         ...
-       </div>
-       <div class="modal-footer">
-         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-         <button type="button" class="btn btn-primary">Save changes</button>
-       </div>
-     </div>
-   </div>
- </div>
+
+  <div class="modal fade" id="choiceModal" tabindex="-1" aria-labelledby="choiceModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="choiceModalLabel">How ?</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="modal-locate mb-3" id="modal-locate">
+            <span>Locate me</span>
+            <span><i class="fa-solid fa-location-dot"></i></span>
+          </div>
+          <div class="modal-search" id="modal-search">
+            <span>Search manually</span>
+            <span><i class="fa-solid fa-magnifying-glass"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </div>
