--- a/views/map.html
+++ b/views/map.html
@@ -1,5 +1,5 @@
 <!-- 
-   But     : About view
+   But     : Map view
    Auteur  : Noé Henchoz
    Date    : 26.05.2022 / v1.0 
 -->
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 
 <div class="container mt-3">
-    <p class="h1 mb-3">About</p>
+    <p class="h1 mb-3">Map</p>
 
-    <p>Text here</p>
+    <p>Map here</p>
 </div>
