--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -12,18 +12,23 @@ body {
 }
 
 /* Imports fonts */
-@font-face {font-family: Marker;src: url('../../fonts/PermanentMarker-Regular.ttf');}
+@font-face {font-family: Varela;src: url('../../fonts/VarelaRound-Regular.ttf');}
 
 /* Navbar */
 .navbar {
   background-color: #8AAAE5!important;
   animation: fromTop 0.7s;
+  font-family: Varela;
 }
 
 /* Cursor pointer on nav links */
 #a-home,
 #a-stations,
-#a-map {cursor: pointer;}
+#a-map {cursor: pointer; color: black;}
+
+.navbar-brand {
+  text-transform: uppercase;
+}
 
 /* Links in navbar animation */
 .nav-link::after {content: "";display: block;width: 0;height: 2px;background: #000;transition: width 0.4s;}
@@ -38,7 +43,7 @@ body {
 .title-view-anime {
   animation: fromLeftWithBlur 1s;
   font-weight: bold;
-  font-family: Marker;
+  font-family: Varela;
 }
 
 /* footer */
