--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -4,7 +4,9 @@
   Date    : 25.05.2022 / v1.0 
 */
 
-html{background-color: #fff;}
+html {
+  background-color: #fff;
+}
 
 body {
   margin-bottom: 149px;
@@ -12,11 +14,14 @@ body {
 }
 
 /* Imports fonts */
-@font-face {font-family: Varela;src: url('../../fonts/VarelaRound-Regular.ttf');}
+@font-face {
+  font-family: Varela;
+  src: url("../../fonts/VarelaRound-Regular.ttf");
+}
 
 /* Navbar */
 .navbar {
-  background-color: #8AAAE5!important;
+  background-color: #8aaae5 !important;
   animation: fromTop 0.7s;
   font-family: Varela;
 }
@@ -24,20 +29,37 @@ body {
 /* Cursor pointer on nav links */
 #a-home,
 #a-stations,
-#a-map {cursor: pointer; color: black;}
+#a-map {
+  cursor: pointer;
+  color: black;
+}
 
 .navbar-brand {
   text-transform: uppercase;
 }
 
 /* Links in navbar animation */
-.nav-link::after {content: "";display: block;width: 0;height: 2px;background: #000;transition: width 0.4s;}
-.nav-link:hover::after {width: 100%;}
-.active::after {width: 100%;}
+.items-nav::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #000;
+  transition: width 0.4s;
+}
+.items-nav:hover::after {
+  width: 100%;
+}
+.active::after {
+  width: 100%;
+}
 
 /* Remove outline on bootstrap toggle button */
 .navbar-toggler:focus,
-.navbar-toggler:active {outline: none;box-shadow: none;}
+.navbar-toggler:active {
+  outline: none;
+  box-shadow: none;
+}
 
 /* Title of each view */
 .title-view-anime {
@@ -51,13 +73,18 @@ footer {
   width: 100%;
   height: 150px;
   z-index: -1;
-  background-color: #8AAAE5;
+  background-color: #8aaae5;
 }
 
 /* Buttons footer links animation */
-.btn-footer {transform: scale(1);transition: transform 0.2s ease-in-out;}
-.btn-footer:hover {transform: scale(1.3);transition: transform 0.2s ease-in-out;}
-
+.btn-footer {
+  transform: scale(1);
+  transition: transform 0.2s ease-in-out;
+}
+.btn-footer:hover {
+  transform: scale(1.3);
+  transition: transform 0.2s ease-in-out;
+}
 
 /* Keyframes animations */
 @keyframes fromLeftWithBlur {
@@ -93,7 +120,7 @@ footer {
 
 .weather-home {
   height: 310px;
-  border: 1px solid black;    
+  border: 1px solid black;
   border-radius: 15px;
   opacity: 1;
   transition: opacity 0.3s ease-in-out;
@@ -106,7 +133,7 @@ footer {
 }
 
 .weather-title-icon {
-  display: flex; 
+  display: flex;
   justify-content: space-between;
 }
 
@@ -125,9 +152,15 @@ footer {
   background-size: cover;
 }
 
-.icon {height: 96px;width: 96px;}
+.icon {
+  height: 96px;
+  width: 96px;
+}
 
-.title-city, .subtitle {font-weight: 500;}
+.title-city,
+.subtitle {
+  font-weight: 500;
+}
 
 .div-temperature-city {
   position: absolute;
@@ -139,7 +172,9 @@ footer {
   border-radius: 20px;
 }
 
-.text-home {font-size: x-large;}
+.text-home {
+  font-size: x-large;
+}
 
 .link {
   cursor: pointer;
@@ -154,4 +189,13 @@ footer {
 
 .row-weather-home {
   animation: fromRightWithBlur 1.5s;
+}
+
+.items-tab {
+  color: black;
+  cursor: pointer;
+}
+
+.items-tab:hover {
+  color: black;
 }
