--- a/views/stations.html
+++ b/views/stations.html
@@ -7,25 +7,19 @@
 <!DOCTYPE html>
 
 <div class="container">
-  <div class="navLeftSide">
-    <div id="list-example" class="list-group">
-      <a class="list-group-item list-group-item-action" href="#list-item-1">Item 1</a>
-      <a class="list-group-item list-group-item-action" href="#list-item-2">Item 2</a>
-      <a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
-      <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
-    </div>
-  </div>
 
-  <div class="content">
-    <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-      <h4 id="list-item-1">Item 1</h4>
-      <p>...</p>
-      <h4 id="list-item-2">Item 2</h4>
-      <p>...</p>
-      <h4 id="list-item-3">Item 3</h4>
-      <p>...</p>
-      <h4 id="list-item-4">Item 4</h4>
-      <p>...</p>
-    </div>
-  </div>
+  <ul class="nav nav-tabs my-2">
+    <li class="nav-item">
+      <a class="nav-link items-tab selected" aria-current="page" id="current">Current</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link items-tab" id="forecast">Forecast</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link items-tab" id="map">Map</a>
+    </li>
+  </ul>
+
+  <div class="subViews" id="subViews"></div>
+
 </div>
