--- a/views/stations.html
+++ b/views/stations.html
@@ -8,9 +8,11 @@
 
 <div class="container">
 
+  <p class="display-3" id="city-title"></p>
+
   <ul class="nav nav-tabs my-2">
     <li class="nav-item">
-      <a class="nav-link items-tab selected" aria-current="page" id="current">Current</a>
+      <a class="nav-link items-tab selected" id="current">Current</a>
     </li>
     <li class="nav-item">
       <a class="nav-link items-tab" id="forecast">Forecast</a>
