--- a/views/stations.html
+++ b/views/stations.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 
-  <p class="display-3" id="city-title"></p>
+  <p class="display-2 my-2" id="city-title"></p>
 
   <ul class="nav nav-tabs my-2">
     <li class="nav-item">
