--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -208,3 +208,7 @@ footer {
   border: 1px solid white!important;
   background-color: white!important;
 }
+
+#city-title {
+  font-family: Varela;
+}
