--- a/views/home.html
+++ b/views/home.html
@@ -13,7 +13,7 @@
     <div class="row mb-4 row-weather-home">
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1 position-relative" id="weather-1">
             <div class="weather-title-icon m-2">
-                <p id="title-city1" class="display-4 title-city">New York</p>
+                <p id="title-city1" class="display-4 title-city"></p>
                 <img class="icon" id="icon1" alt="icon">
             </div>
             <div class="div-temperature-city text-left bottom-0">
@@ -22,7 +22,7 @@
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-2 position-relative" id="weather-2">
             <div class="weather-title-icon m-2">
-                <p id="title-city2" class="display-4 title-city">Paris</p>
+                <p id="title-city2" class="display-4 title-city"></p>
                 <img class="icon" id="icon2" alt="icon">
             </div>
             <div class="div-temperature-city text-left bottom-0">
@@ -31,7 +31,7 @@
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-3 position-relative" id="weather-3">
             <div class="weather-title-icon m-2">
-                <p id="title-city3" class="display-4 title-city">London</p>
+                <p id="title-city3" class="display-4 title-city"></p>
                 <img class="icon" id="icon3" alt="icon">
             </div>
             <div class="div-temperature-city text-left bottom-0">
