--- a/views/stations.html
+++ b/views/stations.html
@@ -8,7 +8,13 @@
 
 <div class="container">
 
-  <p class="display-2 my-2" id="city-title"></p>
+  <div class="city-head">
+    <p class="display-2 my-2 city-title text-white" id="city-title"></p>
+    <div class="icon-head text-center">
+      <img class="city-icon" id="city-icon" alt="icon">
+      <p class="my-0 text-icon text-white" id="text-icon"></p>
+    </div>
+  </div>
 
   <ul class="nav nav-tabs my-2">
     <li class="nav-item">
