--- a/views/home.html
+++ b/views/home.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <p class="display-4 subtitle">Welcome!</p><br>
+    <p class="display-4 subtitle">Hi!</p><br>
     <p class="text-home text-justify">On this site you will find the weather of your favourite cities!</p>
     <p class="text-home text-justify">Above, the current temperature, time and weather is displayed for New York City, Paris and London.</p>
     <p class="text-home text-justify">If you want to add your own weather stations, please refer to the 
