--- a/views/subViews/map.html
+++ b/views/subViews/map.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
-
-<div id="mapid" style="height: 300px;"></div>
+<div class="map-content py-4">
+    <div id="mapid" style="height: 800px;"></div>
+</div>
