--- a/views/subViews/map.html
+++ b/views/subViews/map.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <div class="map-content py-4">
-    <div id="mapid" style="height: 800px;"></div>
+    <div id="mapid" class="mapid"></div>
 </div>
