--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
 <!-- 
-   But     : Main view
+   But     : Home view
    Auteur  : Noé Henchoz
    Date    : 26.05.2022 / v1.0 
 -->
@@ -8,8 +8,11 @@
 
 <div class="container">
 
+    <!-- Start main title -->
     <p class="display-3 mt-3 mb-4 title-view-anime">Welcome on météhenchoz&#160;!</p>
+    <!-- End main title -->
 
+    <!-- Start row 3 cities -->
     <div class="row mb-4 row-weather-home">
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1 position-relative" id="weather-1">
             <div class="weather-title-icon m-2">
@@ -39,18 +42,23 @@
             </div>
         </div>
     </div>
+    <!-- End row 3 cities -->
 
+    <!-- Start description -->
     <p class="display-4 subtitle">Hi!</p><br>
     <p class="text-home text-justify">On this site you will find the weather of your favourite cities!</p>
-    <p class="text-home text-justify">Above, the current temperature, time and weather is displayed for New York City, Paris and London.</p>
-    <p class="text-home text-justify">If you want to add your own weather stations, please refer to the 
+    <p class="text-home text-justify">Above, the current temperature, time and weather is displayed for New York City,
+        Paris and London.</p>
+    <p class="text-home text-justify">If you want to add your own weather stations, please refer to the
         <span id="link-stations-text-home" class="link">stations</span> page.
     </p>
-    <p class="text-home text-justify">Weather data is provided by 
+    <p class="text-home text-justify">Weather data is provided by
         <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.
     </p>
     <p class="text-home text-justify" style="padding-bottom: 120px;">
-        This website was created by Noé Henchoz as part of a development module at the EMF. It uses HTML, CSS and JavaScript.
+        This website was created by Noé Henchoz as part of a development module at the EMF. It uses HTML, CSS and
+        JavaScript.
     </p>
+    <!-- End description -->
 
 </div>
