--- a/views/stations.html
+++ b/views/stations.html
@@ -8,6 +8,7 @@
 
 <div class="container">
 
+  <!-- Start header with city name and icon -->
   <div class="city-head">
     <p class="display-2 my-2 city-title text-white" id="city-title"></p>
     <div class="icon-head text-center">
@@ -15,7 +16,9 @@
       <p class="my-0 text-icon text-white" id="text-icon"></p>
     </div>
   </div>
+  <!-- End header with city name and icon -->
 
+  <!-- Start tabs -->
   <ul class="nav nav-tabs my-2">
     <li class="nav-item">
       <a class="nav-link items-tab selected" id="current">Current</a>
@@ -27,7 +30,10 @@
       <a class="nav-link items-tab" id="map">Map</a>
     </li>
   </ul>
+  <!-- End tabs -->
 
+  <!-- Start loader for subViews -->
   <div class="subViews" id="subViews"></div>
+  <!-- End loader for subViews -->
 
 </div>
