--- a/views/footer.html
+++ b/views/footer.html
@@ -7,6 +7,8 @@
 <!DOCTYPE html>
 
 <div class="container p-4 pb-0">
+
+    <!-- Start footer content -->
     <section class="mb-4">
         <!-- List of networks -->
         <a class="btn btn-light m-1 btn-footer" style="background-color: #1DA1F2; color: white;"
@@ -15,13 +17,17 @@
             style="background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); color: white;"
             href="https://www.instagram.com/henchoznoe/" role="button" target="_blank"><i
                 class="fab fa-instagram"></i></a>
-        <a class="btn btn-light m-1 btn-footer" style="background-color: #333333; color: white;" href="https://github.com/ARATY7"
-            role="button" target="_blank"><i class="fab fa-github"></i></a>
-        <a class="btn btn-light m-1 btn-footer" style="background-color: #52B58A; color: white;" href="mailto:nhenchoz122@icloud.com"
-            role="button"><i class="fa-solid fa-envelope"></i></a>
+        <a class="btn btn-light m-1 btn-footer" style="background-color: #333333; color: white;"
+            href="https://github.com/ARATY7" role="button" target="_blank"><i class="fab fa-github"></i></a>
+        <a class="btn btn-light m-1 btn-footer" style="background-color: #52B58A; color: white;"
+            href="mailto:nhenchoz122@icloud.com" role="button"><i class="fa-solid fa-envelope"></i></a>
     </section>
+    <!-- End footer content -->
+
 </div>
 
+<!-- Start footer footer -->
 <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     &#169; 2022 - <a class="text-white text-decoration-none" href="mailto:nhenchoz122@icloud.com">Noé Henchoz</a>
 </div>
+<!-- End footer footer -->
