--- a/views/home.html
+++ b/views/home.html
@@ -49,8 +49,8 @@
     <p class="text-home text-justify">On this site you will find the weather of your favourite cities!</p>
     <p class="text-home text-justify">Above, the current temperature, time and weather is displayed for New York City,
         Paris and London.</p>
-    <p class="text-home text-justify">If you want to add your own weather stations, please refer to the
-        <span id="link-stations-text-home" class="link">stations</span> page.
+    <p class="text-home text-justify">If you want to add your own weather station, please refer to the
+        <span id="link-station-text-home" class="link">station</span> page.
     </p>
     <p class="text-home text-justify">Weather data is provided by
         <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.
