--- a/views/station.html
+++ b/views/station.html
@@ -9,7 +9,7 @@
 <div class="container">
 
   <!-- Start header with city name and icon -->
-  <div class="city-head">
+  <div class="city-head me-2">
     <p class="display-2 my-2 city-title text-white" id="city-title"></p>
     <div class="icon-head text-center">
       <img class="city-icon" id="city-icon" alt="icon">
