--- a/views/subViews/current.html
+++ b/views/subViews/current.html
@@ -1,3 +1,27 @@
 <!DOCTYPE html>
 
-<p id="current-temperature"></p>
+<div class="row row-current">
+    <div class="col-lg-4 col-sm-12 info-current">
+        <span id="temperature-current" class="info-current"></span><br>
+        <span class="desc-current">TEMPERATURE</span>
+    </div>
+    <div class="col-lg-4 col-sm-12">
+        Text
+    </div>
+    <div class="col-lg-4 col-sm-12">
+        Text
+    </div>
+</div>
+
+<div class="row row-current">
+    <div class="col-lg-4 col-sm-12">
+        Text
+    </div>
+    <div class="col-lg-4 col-sm-12">
+        Text
+    </div>
+    <div class="col-lg-4 col-sm-12">
+        Text
+    </div>
+</div>
+
