--- a/css/styles/styles.css
+++ b/css/styles/styles.css
@@ -151,101 +151,105 @@ body::-webkit-scrollbar-thumb {
 }
 
 .items-tab {
-    color: black;
-    cursor: pointer;
-    font-family: Varela;
-  }
-  
-  .items-tab:hover {
-    color: black;
-  }
-  
-  .nav-tabs {
-    border-bottom: 1px solid white !important;
-  }
-  
-  .selected {
-    border: 1px solid white !important;
-    background-color: white !important;
-  }
-  
-  .city-title {
-    font-family: Varela;
-  }
-  
-  .city-head {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .city-icon {
-    height: 96px;
-    width: 96px;
-  }
-  
-  .text-icon {
-    font-size: medium;
-    font-family: Varela;
-  }
-  
+  color: black;
+  cursor: pointer;
+  font-family: Varela;
+}
+
+.items-tab:hover {
+  color: black;
+}
+
+.nav-tabs {
+  border-bottom: 1px solid white !important;
+}
+
+.selected {
+  border: 1px solid white !important;
+  background-color: white !important;
+}
+
+.city-title {
+  font-family: Varela;
+}
+
+.city-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.city-icon {
+  height: 96px;
+  width: 96px;
+}
+
+.text-icon {
+  font-size: medium;
+  font-family: Varela;
+}
+
 /* footer */
 footer {
-    width: 100%;
-    height: 150px;
-    z-index: -1;
-    background-color: #8aaae5;
-  }
-  
-  /* Buttons footer links animation */
-  .btn-footer {
-    transform: scale(1);
-    transition: transform 0.2s ease-in-out;
-  }
-  .btn-footer:hover {
-    transform: scale(1.3);
-    transition: transform 0.2s ease-in-out;
-  }
-  
+  width: 100%;
+  height: 150px;
+  z-index: -1;
+  background-color: #8aaae5;
+}
+
+/* Buttons footer links animation */
+.btn-footer {
+  transform: scale(1);
+  transition: transform 0.2s ease-in-out;
+}
+.btn-footer:hover {
+  transform: scale(1.3);
+  transition: transform 0.2s ease-in-out;
+}
+
+.mapid {
+  height: 800px;
+}
+
+@media screen and (max-width: 576px) {
   .mapid {
-    height: 800px;
+    height: 600px;
   }
-  
-  @media screen and (max-width: 576px) {
-    .mapid {
-      height: 600px;
-    }
-  }
-  
-  /* Keyframes animations */
+}
+
+/* Keyframes animations */
 @keyframes fromLeftWithBlur {
-    0% {
-      transform: translateX(-100px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0px);
-      opacity: 1;
-    }
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
   }
-  
-  @keyframes fromRightWithBlur {
-    0% {
-      transform: translateX(200px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0px);
-      opacity: 1;
-    }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
   }
-  
-  @keyframes fromTop {
-    0% {
-      transform: translateY(-100px);
-    }
-    100% {
-      transform: translateY(0px);
-    }
+}
+
+@keyframes fromRightWithBlur {
+  0% {
+    transform: translateX(200px);
+    opacity: 0;
   }
-  
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes fromTop {
+  0% {
+    transform: translateY(-100px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.row-current {
+  height: 100px;
+  padding: 10px;
+}
