--- a/views/station.html
+++ b/views/station.html
@@ -9,7 +9,7 @@
 <div class="container">
 
   <!-- Start header with city name and icon -->
-  <div class="city-head me-2">
+  <div class="city-head">
     <p class="display-2 my-2 city-title text-white" id="city-title"></p>
     <div class="icon-head text-center">
       <img class="city-icon" id="city-icon" alt="icon">
@@ -33,7 +33,7 @@
   <!-- End tabs -->
 
   <!-- Start loader for subViews -->
-  <div class="subViews" id="subViews"></div>
+  <div class="subViews text-white" id="subViews"></div>
   <!-- End loader for subViews -->
 
 </div>
