--- a/views/subViews/current.html
+++ b/views/subViews/current.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<div class="container-fluid">
+<div class="container-fluid text-white">
     <div class="row row-current text-center">
         <div class="col-lg-4 col-sm-12 rounded div-clickable-current" id="div-temperature-current">
             <span id="temperature-current" class="info-current"></span><br>
