--- a/views/subViews/forecast.html
+++ b/views/subViews/forecast.html
@@ -1,3 +1,97 @@
 <!DOCTYPE html>
 
-<p>Text de forecast.html</p>
+<div class="container-fluid">
+
+    <div class="accordion" id="accordionForecast">
+
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#forecast-1"
+                    aria-expanded="true" aria-controls="forecast-1" id="date-1-forecast">
+                </button>
+            </h2>
+            <div id="forecast-1" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionForecast">
+                <div class="accordion-body text-white">
+                    
+                </div>
+            </div>
+        </div>
+
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#forecast-2" aria-expanded="false" aria-controls="forecast-2" id="date-2-forecast">
+                </button>
+            </h2>
+            <div id="forecast-2" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionForecast">
+                <div class="accordion-body text-white">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?
+                </div>
+            </div>
+        </div>
+
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#forecast-3" aria-expanded="false" aria-controls="forecast-3" id="date-3-forecast">
+                </button>
+            </h2>
+            <div id="forecast-3" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionForecast">
+                <div class="accordion-body text-white">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
+                    impedit a magni atque,
+                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    quia? Ducimus, iusto officiis?
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</div>
