--- a/views/station.html
+++ b/views/station.html
@@ -33,7 +33,7 @@
   <!-- End tabs -->
 
   <!-- Start loader for subViews -->
-  <div class="subViews text-white" id="subViews"></div>
+  <div class="subViews" id="subViews"></div>
   <!-- End loader for subViews -->
 
 </div>
