--- a/views/subViews/current.html
+++ b/views/subViews/current.html
@@ -2,76 +2,76 @@
 
 <div class="container-fluid text-white">
     <div class="row row-current text-center">
-        <div class="col-lg-4 col-sm-12 rounded div-clickable-current" id="div-temperature-current">
+        <div class="col-lg-4 col-md-4 col-sm-12 rounded div-clickable-current" id="div-temperature-current">
             <span id="temperature-current" class="info-current"></span><br>
             <p class="desc-current">Actual temperature</p>
         </div>
-        <div class="col-lg-4 col-sm-12 rounded div-clickable-current" id="div-feelslike-current">
+        <div class="col-lg-4 col-md-4 col-sm-12 rounded div-clickable-current" id="div-feelslike-current">
             <span id="feelslike-current" class="info-current"></span><br>
             <p class="desc-current">Feels like temperature</p>
         </div>
-        <div class="col-lg-4 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12">
             <span id="humidity-current" class="info-current"></span><br>
             <p class="desc-current">Humidity</p>
         </div>
     </div>
 
     <div class="row row-current text-center">
-        <div class="col-lg-4 col-sm-12"></div>
-        <div class="col-lg-4 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12"></div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
             <div class="progress">
-                <div id="cloud-current" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="cloud-current" class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
             </div><br>
-            <p class="desc-current">Cloud</p>
+            <p class="desc-current">Cloud rate</p>
         </div>
-        <div class="col-lg-4 col-sm-12"></div>
+        <div class="col-lg-4 col-md-4 col-sm-12"></div>
     </div>
 
     <div class="row row-current text-center">
-        <div class="col-lg-4 col-sm-12 rounded div-clickable-current" id="div-wind-current">
+        <div class="col-lg-4 col-md-4 col-sm-12 rounded div-clickable-current" id="div-wind-current">
             <span id="wind-current" class="info-current"></span><br>
             <p class="desc-current">Wind</p>
         </div>
-        <div class="col-lg-4 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12">
             <span id="windDir-current" class="info-current"></span><br>
             <p class="desc-current">Wind direction</p>
         </div>
-        <div class="col-lg-4 col-sm-12 rounded div-clickable-current" id="div-gust-current">
+        <div class="col-lg-4 col-md-4 col-sm-12 rounded div-clickable-current" id="div-gust-current">
             <span id="gust-current" class="info-current"></span><br>
             <p class="desc-current">Gust wind</p>
         </div>
     </div>
 
     <div class="row row-current text-center">
-        <div class="col-lg-4 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12">
             <span id="uv-current" class="info-current"></span><br>
             <p class="desc-current">UV</p>
         </div>
-        <div class="col-lg-4 col-sm-12 rounded div-clickable-current" id="div-pressure-current">
+        <div class="col-lg-4 col-md-4 col-sm-12 rounded div-clickable-current" id="div-pressure-current">
             <span id="pressure-current" class="info-current"></span><br>
             <p class="desc-current">Pressure</p>
         </div>
-        <div class="col-lg-4 col-sm-12 rounded div-clickable-current" id="div-precip-current">
+        <div class="col-lg-4 col-md-4 col-sm-12 rounded div-clickable-current" id="div-precip-current">
             <span id="precip-current" class="info-current"></span><br>
             <p class="desc-current">Precipitation</p>
         </div>
     </div>
 
     <div class="row row-current text-center">
-        <div class="col-lg-4 col-sm-12"></div>
-        <div class="col-lg-4 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12"></div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
             <span id="lastUpdate-current" class="info-current"></span><br>
             <p class="desc-current">Last update (local time)</p>
         </div>
-        <div class="col-lg-4 col-sm-12"></div>
+        <div class="col-lg-4 col-md-4 col-sm-12"></div>
     </div>
 
     <div class="row row-current text-center">
-        <div class="col-lg-4 col-sm-12"></div>
-        <div class="col-lg-4 col-sm-12">
+        <div class="col-lg-4 col-md-4 col-sm-12"></div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
             <button type="button" class="btn btn-primary" id="btn-update-current"><i class="fa-solid fa-arrows-rotate"></i></button><br><br>
             <p class="desc-current">Update (updates every 15 minutes)</p>
         </div>
-        <div class="col-lg-4 col-sm-12"></div>
+        <div class="col-lg-4 col-md-4 col-sm-12"></div>
     </div>
 </div>
