--- a/views/subViews/current.html
+++ b/views/subViews/current.html
@@ -19,9 +19,7 @@
     <div class="row row-current text-center">
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
         <div class="col-lg-4 col-md-4 col-sm-12">
-            <div class="progress">
-                <div id="cloud-current" class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-            </div><br>
+            <span id="cloud-current" class="info-current"></span><br>
             <p class="desc-current">Cloud rate</p>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
