--- a/views/subViews/forecast.html
+++ b/views/subViews/forecast.html
@@ -50,6 +50,15 @@
                     </div>
                     <!-- Start temperature min/avg/max row -->
                     
+                    
+                    <div class="row row-forecast div-days-1-forecast" id="div-days-1-forecast">
+                        <div class="col-lg-1 col-md-3 col-sm-3 text-center" id="div-hour-1-forecast">
+                            <span class="days-temp-1-forecast" id="days-temp-1-forecast">Temp</span><br>
+                            <img id="days-icon-1-forecast" src="//cdn.weatherapi.com/weather/64x64/day/122.png"><br>
+                            <span class="days-temp-1-forecast" id="days-temp-1-forecast">Heure</span>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -63,11 +72,8 @@
             <div id="forecast-2" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                 data-bs-parent="#accordionForecast">
                 <div class="accordion-body text-white">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde impedit a magni atque,
-                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
-                    quia? Ducimus, iusto officiis?Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti unde
-                    impedit a magni atque,
-                    distinctio cupiditate, natus voluptates nulla debitis ducimus pariatur sequi consequatur hic vero
+                    
+                    
                     
                 </div>
             </div>
