--- a/views/home.html
+++ b/views/home.html
@@ -13,8 +13,7 @@
     <!-- End main title -->
 
     <!-- Start row 3 cities -->
-    <!-- Améloration bootstrap par Valentino Iliev &copy;-->
-    <div class="d-flex flex-lg-row flex-column  mb-4 row-weather-home m-0">
+    <div class="d-flex flex-lg-row flex-column mb-4 row-weather-home m-0">
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1 position-relative" id="weather-1">
             <div class="weather-title-icon m-2">
                 <p id="title-city1" class="display-4 title-city"></p>
@@ -46,12 +45,17 @@
     <!-- End row 3 cities -->
 
     <!-- Start description -->
-    <p class="display-4 subtitle my-2">Hi!</p><br>
-    <p class="text-home text-justify">On this site you will find the weather of your favourite cities!
-    Above, the current temperature, time and weather is displayed for New York City, Paris and London.
-    If you want to add your own weather station, please refer to the<span id="link-station-text-home" class="link"> station</span> page.
-    Weather data is provided by
+    <p class="display-4 subtitle mb-5">Hi!</p>
+    <p class="text-home text-justify">On this site you will find the weather of your favourite cities!</p>
+    <p class="text-home text-justify">Above, the current temperature, time and weather is displayed for New York City,
+        Paris and London.</p>
+    <p class="text-home text-justify">If you want to add your own weather station, please refer to the
+        <span id="link-station-text-home" class="link">station</span> page.
+    </p>
+    <p class="text-home text-justify">Weather data is provided by
         <a href="https://www.weatherapi.com/" target="_blank" class="link text-decoration-none">weatherapi.com</a>.
+    </p>
+    <p class="text-home text-justify" style="padding-bottom: 120px;">
         This website was created by Noé Henchoz as part of a development module at the EMF. It uses HTML, CSS and
         JavaScript.
     </p>
