--- a/views/home.html
+++ b/views/home.html
@@ -9,11 +9,11 @@
 <div class="container">
 
     <!-- Start main title -->
-    <p class="display-3 mt-5 mb-5 title-view-anime d-flex justify-content-center">Welcome on météhenchoz&#160;!</p>
+    <p class="display-3 my-5 title-view-anime d-flex justify-content-center">Welcome on météhenchoz&#160;!</p>
     <!-- End main title -->
 
     <!-- Start row 3 cities -->
-    <div class="d-flex flex-lg-row flex-column mb-4 row-weather-home m-0">
+    <div class="d-flex flex-lg-row flex-column mb-4 row-weather-home">
         <div class="col-lg-4 col-md-12 col-sm-12 weather-home weather-1 position-relative" id="weather-1">
             <div class="weather-title-icon m-2">
                 <p id="title-city1" class="display-4 title-city"></p>
