--- a/views/subViews/forecast.html
+++ b/views/subViews/forecast.html
@@ -50,14 +50,9 @@
                     </div>
                     <!-- Start temperature min/avg/max row -->
                     
-                    
-                    <div class="row row-forecast div-days-1-forecast" id="div-days-1-forecast">
-                        <div class="col-lg-1 col-md-3 col-sm-3 text-center" id="div-hour-1-forecast">
-                            <span class="days-temp-1-forecast" id="days-temp-1-forecast">Temp</span><br>
-                            <img id="days-icon-1-forecast" src="//cdn.weatherapi.com/weather/64x64/day/122.png"><br>
-                            <span class="days-temp-1-forecast" id="days-temp-1-forecast">Heure</span>
-                        </div>
-                    </div>
+                    <!-- Start forecast for the day -->
+                    <div class="row row-forecast div-days-1-forecast" id="div-days-1-forecast"></div>
+                    <!-- End forecast for the day -->
 
                 </div>
             </div>
